View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024076 | Open CASCADE | OCCT:Coding | public | 2013-07-16 11:00 | 2013-12-19 13:56 |
Reporter | apn | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024076: New warning during compilation OCCT on WNT platform (release and debug) | ||||
Description | Warning in file src/Adaptor3d/Adaptor3d_IsoCurve.cxx Current master includes two fixes 24058 and 23947. In both issues operator return gp_Elips() was deleted. 24058: gp_Elips Adaptor3d_IsoCurve::Ellipse() const { ... - // portage WNT - return gp_Elips(); ... } 23947: gp_Elips Adaptor3d_IsoCurve::Ellipse() const { ... { Standard_NoSuchObject::Raise("Adaptor3d_IsoCurve:Ellipse"); - return gp_Elips(); } ... } Regarding merge this two changes there is 1 warning in current state of master because function doesn't have any return value. 'Adaptor3d_IsoCurve::Ellipse' : not all control paths return a value | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Dear apn, Please, test. |
|
Reviewed, branch CR24076 will be tested. |
|
Dear BugMaster, Branch CR24076 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: b3aa748fb6091ce5ffa644c4e9a18cd38d9346ca Number of compiler warnings: occt component : Linux: 2 (2 on master) Windows: 7 (8 on master) products component : Linux: 0 (0 on master) Windows: 63 (63 on master) Regressions: No regressions Improvements: No improvements Testing cases: Not needed Testing on Linux: Total MEMORY difference: 365563336 / 365734040 Total CPU difference: 46073.060000000754 / 45333.95000000106 Testing on Windows: Total MEMORY difference: 423974928 / 425278288 Total CPU difference: 33724.75 / 34925.53125 There are not differences in images found by testdiff. |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-07-16 11:00 | apn | New Issue | |
2013-07-16 11:00 | apn | Assigned To | => omy |
2013-07-16 11:00 | apn | Test case number | => Not needed |
2013-07-16 11:00 | apn | Status | new => assigned |
2013-07-16 14:35 |
|
Status | assigned => resolved |
2013-07-16 14:35 |
|
Status | resolved => reviewed |
2013-07-16 14:35 |
|
Note Added: 0025080 | |
2013-07-16 14:35 |
|
Assigned To | omy => apn |
2013-07-16 14:35 |
|
Status | reviewed => assigned |
2013-07-17 10:13 | apn | Note Added: 0025093 | |
2013-07-17 10:13 | apn | Status | assigned => resolved |
2013-07-17 10:13 | apn | Status | resolved => reviewed |
2013-07-17 10:56 | apn | Note Added: 0025094 | |
2013-07-17 10:56 | apn | Assigned To | apn => bugmaster |
2013-07-17 10:56 | apn | Status | reviewed => tested |
2013-07-19 13:33 |
|
Changeset attached | => occt master cf6625bd |
2013-07-19 13:33 |
|
Assigned To | bugmaster => omy |
2013-07-19 13:33 |
|
Status | tested => verified |
2013-07-19 13:33 |
|
Resolution | open => fixed |
2013-12-19 13:52 | bugmaster | Status | verified => closed |
2013-12-19 13:56 | bugmaster | Fixed in Version | => 6.7.0 |
2014-01-11 11:58 |
|
Category | OCCT Release:BUILD => OCCT:Coding |