0024076: New warning during compilation OCCT on WNT platform (release and debug)

Added return statement to disable warning