src/Adaptor3d/Adaptor3d_IsoCurve.cxx
@@ -807,6 +807,7 @@ gp_Elips Adaptor3d_IsoCurve::Ellipse() const
       Standard_NoSuchObject::Raise("Adaptor3d_IsoCurve:Ellipse");
     } 
   }
+  return gp_Elips();
 }
 
 //=======================================================================
